--- a/hyoji.html
+++ b/hyoji.html
@@ -52,7 +52,7 @@ var manager = new WebVRManager(renderer, effect);
 
 //////////////////////////////////////////////////
 // 各種オブジェクトのセットアップ
-setTimeout("location.reload()",180000);　　　　　　　　　　//3分ごとにリセット
+//setTimeout("location.reload()",180000);　　　　　　　　　　//3分ごとにリセット
 // 地球オブジェクトの生成
 var earth = new THREE.Object3D();　　　　　　　　　　　　//3Dオブジェクトを作成
 var earthLoader = new THREE.TextureLoader();　　　　　　　//テクスチャをロード
