--- a/hyoji(video.ver).html
+++ b/hyoji(video.ver).html
@@ -73,7 +73,7 @@ function onEarthTextureLoaded(texture) {
     var geometry = new THREE.SphereGeometry(1, 32, 32); //球体の大きさ（半径、縦に何分割か、横に何分割か）
     geometry.scale(-1, 1, 1);　　　　　　　　　　　　　　//球体の倍率（-1倍にすることで貼り付けた画像が内側に見える）
     
-    
+    video = document.getElementById('video');
     //three.js用のテクスチャに変換
     var texture = new THREE.VideoTexture( video );
     texture.minFilter = THREE.LinearFilter;
